[Release 1.2 version 1.2.1] Fixed bug on Mobile, update CSS trang chu and javaScript, add Dau goi page

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -46,7 +46,7 @@ a {
 .nav-menu a {
   color: bisque;
   font-size: 1.6rem;
-  padding: 20px;
+  padding: 17px;
   display: block;
 }
 
@@ -278,7 +278,7 @@ figcaption {
 }
 
 /* Hiển thị dropdown khi hover */
-.user-profile:hover .dropdown-menu {
+.user-profile.is-admin:hover .dropdown-menu {
   display: block;
 }
 
